finished rendering correct header along with collapsable menu and correct carousel rendering

--- a/frontier_static/_includes/css/frontier.css
+++ b/frontier_static/_includes/css/frontier.css
@@ -231,6 +231,10 @@ fieldset[disabled] .btn-xl.active {
   background-color: #fed136;
 }
 
+.navbar-nav {
+  padding-left: 15px;
+}
+
 .navbar .navbar-nav li a {
   text-transform: uppercase;
   font-family: 'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif';
@@ -258,6 +262,10 @@ fieldset[disabled] .btn-xl.active {
 .navbar .navbar-nav > .active > a:focus {
   color: #fff;
   background-color: #fed136;
+}
+
+.navbar-toggler-icon {
+  height: 1.2rem;
 }
 
 @media (min-width: 768px) {
@@ -379,6 +387,20 @@ section h3.section-subheading {
 #carousel {
   width: 100%;
   padding: 0 0 10px 0;
+  margin-bottom: 0;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opactiy 1s ease;
+  -o-transition: opactiy 1s ease;
+  transition: opactiy 1s ease;
+}
+
+#carousel.slick-initialized {
+  visibility: visible;
+  opacity: 1;
+  width: 100%;
+  padding: 0 0 10px 0;
+  margin-bottom: 0;
 }
 
 #carousel .carousel-img {
@@ -852,6 +874,10 @@ section h3.section-subheading {
 
 /* Team mediaQuery information */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+  .navbar-brand {
+    padding: 0;
+  }
+
   .col-md-3 {
     padding: 0;
   }
